--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Finally a portfolio site.",
   "main": "index.html",
   "scripts": {
-    "start": "http-server . -p 8080 -i -o -c-1"
+    "start": "http-server . -p 8080 -i -o -c-1 -P http://127.0.0.1:8080"
   },
   "repository": {
     "type": "git",
