build(npm): compile sass before starting http-server

--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Finally a portfolio site.",
   "main": "index.html",
   "scripts": {
-    "start": "http-server . -p 8080 -i -o -c-1 -P http://127.0.0.1:8080",
-    "sass": "sass --watch  assets/sass/master.scss:assets/css/master.css"
+    "start": "npm run sass-build; npm run server",
+    "server": "http-server . -p 8080 -i -o -c-1 -P http://127.0.0.1:8080",
+    "sass": "sass --watch assets/sass/master.scss:assets/css/master.css",
+    "sass-build": "sass assets/sass/master.scss:assets/css/master.css"
   },
   "repository": {
     "type": "git",
