--- a/v2/package.json
+++ b/v2/package.json
@@ -21,7 +21,7 @@
     "gsap": "^3.11.5",
     "just-throttle": "^4.2.0",
     "lottie-react": "^2.4.0",
-    "next": "13.4.2",
+    "next": "^14.0.4",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
